[package]
name = "struct-validation-core"
version = "0.1.0"
authors = ["Matthew Lyon <matthew@lyon.systems>"]
edition = "2021"
description = "Core functionality for struct validation, including traits and error types."
repository = "https://github.com/MatthewIsHere/struct-validation"
license = "MIT"
keywords = ["validation", "core", "struct"]
categories = ["development-tools"]