[package]
name = "struct-validation-derive"
version = "0.1.1"
authors = ["Matthew Lyon <matthew@lyon.systems>"]
edition = "2021"
description = "Procedural macros for deriving validation implementations on structs."
repository = "https://github.com/MatthewIsHere/struct-validation"
license = "MIT"
keywords = ["validation", "derive", "proc-macro"]
categories = ["development-tools"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
struct-validation-core = { path = "../struct-validation-core", version = "0.1.1" }

[lib]
proc-macro = true
